refactor group system